Fix scrolling items being hidden behind `<nav>`

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@ main {
 	--link-decoration: underline;
 }
 
+main [id] {
+	scroll-margin-top: var(--nav-height, 3.5rem);
+}
+
 article p:first-letter {
 	margin-left: 2em;
 }
